force-app/main/default/objects/Services_SOW__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SOW</relationshipName>
    <type>Lookup</type>
</CustomField>