force-app/main/default/objects/Services_SOW__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Opportunity Close Date</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Target Close Date</label>
    <type>Date</type>
</CustomField>