force-app/main/default/objects/Services_SOW__c/fields/Customer_Locations_in_Scope__c.field-meta.xml
<CustomField>
    <fullName>Customer_Locations_in_Scope__c</fullName>
    <label>Customer Locations in Scope</label>
    <type>TextArea</type>
</CustomField>