force-app/main/default/objects/Services_SOW__c/fields/Customer_System_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Customer_System_Dependencies__c</fullName>
    <label>Customer System Dependencies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>