force-app/main/default/objects/Services_SOW__c/fields/Customer_Training_Intapp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Training_Intapp__c</fullName>
    <label>Customer Training Intapp</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>