force-app/main/default/objects/Services_SOW__c/fields/Date_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Date_Services_Required__c</fullName>
    <description>SC-000057</description>
    <label>Date Services Required</label>
    <type>Date</type>
</CustomField>