force-app/main/default/objects/Services_SOW__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Please provide the deadline by when you will need this SOW to be ready</description>
    <inlineHelpText>Please provide the deadline by when you will need this SOW to be ready</inlineHelpText>
    <label>Requested Deadline</label>
    <type>Date</type>
</CustomField>