force-app/main/default/objects/Services_SOW__c/fields/Engaged_On_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Engaged_On_Other_Products__c</fullName>
    <label>Engaged On Other Products</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>