force-app/main/default/objects/Services_SOW__c/fields/Existing_Test_Environment__c.field-meta.xml
<CustomField>
    <fullName>Existing_Test_Environment__c</fullName>
    <description>Does the customer have a standing test environment? If so, does it match production or do we need to install software on it?</description>
    <inlineHelpText>Does the customer have a standing test environment? If so, does it match production or do we need to install software on it?</inlineHelpText>
    <label>Existing Test Environment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Test matches Production)</fullName>
            </value>
            <value>
                <fullName>Yes (Test servers available, software needs to be installed)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>New Client - Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>