force-app/main/default/objects/Services_SOW__c/fields/Extended_Or_Premium_Support__c.field-meta.xml
<CustomField>
    <fullName>Extended_Or_Premium_Support__c</fullName>
    <label>Extended Or Premium Support</label>
    <type>TextArea</type>
</CustomField>