force-app/main/default/objects/Services_SOW__c/fields/Migration_Or_Upgrade_Sol_Req__c.field-meta.xml
<CustomField>
    <fullName>Migration_Or_Upgrade_Sol_Req__c</fullName>
    <label>Migration Or Upgrade Sol Req</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>