force-app/main/default/objects/Services_SOW__c/fields/Ops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ops_Comments__c</fullName>
    <description>SC-000057</description>
    <label>Ops Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>