force-app/main/default/objects/Services_SOW__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product (Expiring 11/13/2018)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Open: Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open: Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open: Intake (Engagement Letters)</fullName>
            </value>
            <value>
                <fullName>Intapp Open: Terms of Business</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Capture</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Compliance</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Core Management</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Legacy Axiom Mobility</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Legacy DTE</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Legacy DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Mobility</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Total Time Management</fullName>
            </value>
            <value>
                <fullName>Intapp Time: Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>CG Analyze</fullName>
            </value>
            <value>
                <fullName>CG Flow</fullName>
            </value>
            <value>
                <fullName>CG Protect</fullName>
            </value>
            <value>
                <fullName>LegalKEY</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
            <value>
                <fullName>Intapp Open: Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms of Business - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>