force-app/main/default/objects/Services_SOW__c/fields/Purpose_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Call__c</fullName>
    <description>SC-000057</description>
    <label>Purpose of Call</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>