force-app/main/default/objects/Services_SOW__c/fields/Recurring_Involved__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Involved__c</fullName>
    <label>Recurring Involved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>