force-app/main/default/objects/Services_SOW__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipName>SOW</relationshipName>
    <type>Lookup</type>
</CustomField>