force-app/main/default/objects/Services_SOW__c/fields/Remote_Access_Restrictions_Details__c.field-meta.xml
<CustomField>
    <fullName>Remote_Access_Restrictions_Details__c</fullName>
    <label>Remote Access Restrictions Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>