force-app/main/default/objects/Services_SOW__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote only</fullName>
            </value>
            <value>
                <fullName>SOW document required</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>SOW Amendment</fullName>
            </value>
            <value>
                <fullName>Intapp Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>