force-app/main/default/objects/Services_SOW__c/fields/Requesting_Employee__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SOW1</relationshipName>
    <type>Lookup</type>
</CustomField>