force-app/main/default/objects/Services_SOW__c/fields/Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Services_Amount__c</fullName>
    <label>Services Amount - Fixed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>