force-app/main/default/objects/Services_SOW__c/fields/Services_Sales_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Services_Sales_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Sales Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>