force-app/main/default/objects/Services_SOW__c/fields/Single_Or_Potential_Multi_Phase__c.field-meta.xml
<CustomField>
    <fullName>Single_Or_Potential_Multi_Phase__c</fullName>
    <label>Single Or Potential Multi Phase Project</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>