force-app/main/default/objects/Services_SOW__c/fields/SOW_Complete__c.field-meta.xml
<CustomField>
    <fullName>SOW_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOW Complete</label>
    <type>Checkbox</type>
</CustomField>