force-app/main/default/objects/Services_SOW__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Returned to Requesting Employee for Edits</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>SOW Completed</fullName>
            </value>
            <value>
                <fullName>Out-of-date</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>SOW Modified</fullName>
            </value>
            <value>
                <fullName>Scoping in Progress</fullName>
            </value>
            <value>
                <fullName>SOW documentation in progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>