force-app/main/default/objects/Services_SOW__c/fields/Submit_directly_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_directly_for_Approval__c</fullName>
    <inlineHelpText>By picking &quot;yes&quot;, this SOW will immediately be processed through approvals once created and sent to the customer. By picking &quot;no&quot;, the SOW will be sent back to the requestor for processing of approvals through Sales Ops and sending it to the customer.</inlineHelpText>
    <label>Submit directly for Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>