force-app/main/default/objects/Services_SOW__c/fields/Time_Questionnaire_Available__c.field-meta.xml
<CustomField>
    <fullName>Time_Questionnaire_Available__c</fullName>
    <label>Time Questionnaire  Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>