force-app/main/default/objects/Services_SOW__c/fields/Type_of_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Support_Required__c</fullName>
    <description>SC-000057</description>
    <label>Type of Support Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Business Consulting</fullName>
            </value>
            <value>
                <fullName>Professional Services Scoping</fullName>
            </value>
            <value>
                <fullName>Services Support</fullName>
                <isActive>false</isActive>
                <label>PS Services Support</label>
            </value>
            <value>
                <fullName>Partner Support</fullName>
                <isActive>false</isActive>
                <label>Partner Support</label>
            </value>
            <value>
                <fullName>Specialist</fullName>
                <isActive>false</isActive>
                <label>Specialist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>