force-app/main/default/objects/Services_SOW__c/fields/Urgency_Level__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Level__c</fullName>
    <label>Urgency Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>