force-app/main/default/objects/Services_SOW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOW_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Lookup__c</columns>
    <columns>Deadline__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>