force-app/main/default/objects/Services_SOW__c/listViews/All_Time.listView-meta.xml
<ListView>
    <fullName>All_Time</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Description__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Submit_directly_for_Approval__c</columns>
    <columns>Product_Lookup__c</columns>
    <columns>Deadline__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent to Sales Ops,Sent to Customer,Signed by Customer,Signed by Intapp</value>
    </filters>
    <filters>
        <field>Product_Lookup__c</field>
        <operation>notContain</operation>
        <value>Wall,open</value>
    </filters>
    <label>Time SOWs Sent</label>
</ListView>