force-app/main/default/objects/Services_SOW__c/listViews/Time_Completed1.listView-meta.xml
<ListView>
    <fullName>Time_Completed1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Description__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Submit_directly_for_Approval__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>SOW Completed</value>
    </filters>
    <filters>
        <field>Product_Lookup__c</field>
        <operation>notContain</operation>
        <value>Wall,open</value>
    </filters>
    <label>Time SOW ONLY Complete</label>
</ListView>